[package]
name = "rust-btc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
ring = "0.17"
secp256k1 = { version = "0.27", features = ["rand"] }
rand = "0.8"
once_cell = "1.8"
rayon = "1.7"
lru = "0.11"
dashmap = "5.5"
chrono = "0.4"
parking_lot = "0.12"
ripemd = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }